--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,4 +1,4 @@
-version: 1
+version: 2
 
 sphinx:
   configuration: docs/conf.py
@@ -6,7 +6,7 @@ sphinx:
   builder: html
   
 python:
-  version: 3.8
+  version: '3.8'
   install:
     - method: pip
       path: .
