--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-#var is weird
-test*.*
+# VSCode
 .vscode/
+
+# PyCharm
+.idea
 
 # C extensions
 *.so
@@ -35,8 +37,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -45,6 +45,7 @@ pip-log.txt
 pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+test*.*
 htmlcov/
 .tox/
 .nox/
@@ -92,11 +93,7 @@ ipython_config.py
 .python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
