--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = An asynchronous python wrapper around the GitHub API
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/VarMonke/Github-Api-Wrapper
-author = VarMonke & contributors
+author = VarMonke, sudosnok & contributors
 author_email = var.monke@gmail.com
 license = MIT
 license_file = LICENSE
