--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -4,7 +4,7 @@ on: [ pull_request, push ]
 
 jobs:
   build:
-    if: github.event.pull_request.user.type != 'Bot'
+    if: github.event.pull_request.user.type != "Bot"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -23,4 +23,4 @@ jobs:
         run: pip install -U pip pylint
 
       - name: Run PyLint
-        run: pylint $(git ls-files '*.py')
+        run: pylint $(git ls-files "*.py")
